Fixed z-index issue in slide 4

--- a/frontend/components/Slide/Slide.module.css
+++ b/frontend/components/Slide/Slide.module.css
@@ -31,6 +31,10 @@
 				grid-template-columns: 1fr;
 			}
 		}
+
+		&:global(.over) {
+			z-index: 100;
+		}
 	}
 
 	&:global(.first) {
